swapped out abstract mrjackchar refs for interface refs

--- a/character/.gitignore
+++ b/character/.gitignore
@@ -13,3 +13,6 @@
 /BasicCharacter.class
 /Madame.class
 /JosephLane.class
+/InspectorAbberline.class
+/MrJackCharacterDec.class
+/RestrictedMovementDec.class
